# OpenSeaSeis

./: CMakeLists.txt  modelconfig.xml
cmake/: Dependencies.cmake  cmake_setup.cmake
doc/: todolist
example_flows/: t01_create_pseudo_data.flow
include/geolib/: geolib_string_utils.h
include/system/: csMethodRetriever.h  csModuleLists.h
src/: CMakeLists.txt
src/geolib/: CMakeLists.txt  csFileUtils.cc
src/io/: CMakeLists.txt
src/modules/: CMakeLists.txt
src/segy/: CMakeLists.txt
src/submit/: CMakeLists.txt  cseis_submit.cc
src/system/: CMakeLists.txt  csMethodRetriever.cc  csModuleLists.cc
