CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT(feature-verify C CXX)

LIST(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake/modules)

option(BUILD_EXAMPLES "build examples" ON)
option(BUILD_TESTS "build test cases" OFF)

FIND_PACKAGE( OpenMP REQUIRED)
INCLUDE(cmake/dependencies.cmake)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fPIC -std=c++11")
SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fPIC")
SET(CUDA_PROPAGATE_HOST_FLAGS OFF)
SET(CUDA_NVCC_FLAGS ${CUDA_NVCC_FLAGS} "-Xcompiler -fPIC")

SET(FV_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
LIST(APPEND FV_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/fverify)
LIST(APPEND FV_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/fverify_api)

INCLUDE_DIRECTORIES(${FV_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)

SET(FV_LINK fverify_api)

IF(BUILD_EXAMPLES)
    ADD_SUBDIRECTORY(example)
ENDIF()

INSTALL(FILES DESTINATION lib)
INSTALL(DIRECTORY include/fverify_api DESTINATION include/)
