CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(OpenSeaSeis C CXX)

FIND_PACKAGE( OpenMP REQUIRED)

SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-fPIC -std=c++11")
SET(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-fPIC")

SET(OpenSeaSeis_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include)
LIST(APPEND OpenSeaSeis_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/geolib)
LIST(APPEND OpenSeaSeis_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/io)
LIST(APPEND OpenSeaSeis_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/segy)
LIST(APPEND OpenSeaSeis_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/include/system)

SET(APPEND OpenSeaSeis_LINKER_LIBS)

INCLUDE_DIRECTORIES(${OpenSeaSeis_INCLUDE_DIR})

ADD_SUBDIRECTORY(src)
