FILE(GLOB_RECURSE CPP_SRCS *.cc)

ADD_LIBRARY(as_io SHARED ${CPP_SRCS})

TARGET_LINK_LIBRARIES(as_io ${OpenSeaSeis_LINKER_LIBS})
SET(OpenSeaSeis_LINKER_LIBS as_io ${OpenSeaSeis_LINKER_LIBS} PARENT_SCOPE)

INSTALL( TARGETS as_io
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
)