FILE(GLOB_RECURSE CPP_SRCS *.cc)

ADD_LIBRARY(as_segy SHARED ${CPP_SRCS})

TARGET_LINK_LIBRARIES(as_segy ${OpenSeaSeis_LINKER_LIBS})
SET(OpenSeaSeis_LINKER_LIBS as_segy ${OpenSeaSeis_LINKER_LIBS} PARENT_SCOPE)

INSTALL( TARGETS as_segy
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
)