FILE(GLOB_RECURSE CPP_SRCS *.cc)

ADD_LIBRARY(as_system SHARED ${CPP_SRCS})

TARGET_LINK_LIBRARIES(as_system ${OpenSeaSeis_LINKER_LIBS})
SET(OpenSeaSeis_LINKER_LIBS as_system ${OpenSeaSeis_LINKER_LIBS} PARENT_SCOPE)

INSTALL( TARGETS as_system
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
)