FILE(GLOB_RECURSE CPP_SRCS *.cc)

ADD_LIBRARY(as_cssystem SHARED ${CPP_SRCS})

TARGET_LINK_LIBRARIES(as_cssystem ${OpenSeaSeis_LINKER_LIBS})
SET(OpenSeaSeis_LINKER_LIBS as_cssystem ${OpenSeaSeis_LINKER_LIBS} PARENT_SCOPE)

INSTALL( TARGETS as_cssystem
         LIBRARY DESTINATION lib
         ARCHIVE DESTINATION lib
         RUNTIME DESTINATION bin
)
